classDiagram
    %% PawPal+ — Pet Care App UML Class Diagram

    class Owner {
        +String ownerId
        +String name
        +String email
        +String phone
        +List~Pet~ pets
        +addPet(Pet pet) void
        +removePet(String petId) void
        +getPets() List~Pet~
        +updateContactInfo(String email, String phone) void
    }

    class Pet {
        +String petId
        +String name
        +String species
        +String breed
        +int age
        +double weight
        +List~Task~ tasks
        +Owner owner
        +addTask(Task task) void
        +removeTask(String taskId) void
        +getTasks() List~Task~
        +getUpcomingTasks() List~Task~
    }

    class Task {
        +String taskId
        +String title
        +String description
        +String category
        +String priority
        +int durationMinutes
        +DateTime dueDate
        +boolean isComplete
        +boolean isRecurring
        +Pet pet
        +markComplete() void
        +reschedule(DateTime newDate) void
        +isOverdue() boolean
    }

    class PawPalSystem {
        +String systemId
        +List~Owner~ owners
        +registerOwner(Owner owner) void
        +removeOwner(String ownerId) void
        +findOwner(String ownerId) Owner
        +getAllPets() List~Pet~
        +sendReminder(Task task) void
        +generateSchedule(Owner owner, Date day, int availableMinutes) List~Task~
    }

    PawPalSystem "1" o-- "0..*" Owner : manages
    Owner "1" *-- "0..*" Pet : owns
    Pet "1" *-- "0..*" Task : has
    Task ..> Pet : belongs to
    Pet ..> Owner : belongs to
